--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- Caixa "Agende sua consulta!" -->
 <div class="cta-box">
   <h3>Cuide da Sua Beleza!</h3>
-  <p>Atendemos com os melhores tratamentos estéticos para você se sentir ainda mais confiante.</p>
+  <p>Tratamentos estéticos para você brilhar.</p>
   <a href="https://wa.me/1234567890" class="cta-button" target="_blank">Agende sua consulta</a>
 </div>
 
