--- a/index.html
+++ b/index.html
@@ -25,34 +25,33 @@
   <!-- Banner com efeito Parallax sutil -->
   <section id="banner" class="banner">
     <img src="banner.jpg" alt="Imagem do banner da Clínica" loading="lazy">
-   
+  </section>
+
+  <!-- Seção Sobre Nosso Trabalho -->
+  <section id="sobre" class="descricao">
+    <!-- Caixa "Cuide da Sua Beleza!" acima do container -->
+    <div class="cta-box">
+      <h3>Cuide da Sua Beleza!</h3>
+      <p>Tratamentos estéticos para você brilhar.</p>
+      <a href="https://wa.me/1234567890" class="cta-button" target="_blank">Agende sua consulta</a>
+    </div>
+  
+    <div class="descricao-container">
+      <div class="descricao-imagem">
+        <img src="banner.jpg" alt="Dr. Filipe Vanelli - Estética Avançada">
+      </div>
+      <div class="descricao-texto">
+        <h2>Sobre o Dr. Filipe Vanelli</h2>
+        <hr class="separator">
+        <p>
+          O Dr. Filipe Vanelli é um profissional dedicado que alia sua expertise farmacêutica e sólida formação médica para transformar a estética em arte. Com ampla experiência e constante atualização em tratamentos avançados, ele desenvolve procedimentos personalizados que realçam a beleza natural dos pacientes, combinando rigor científico e sensibilidade para proporcionar resultados surpreendentes e um bem‐estar incomparável.
+        </p>
+        <p>
+          Formado em Farmácia e Medicina, o Dr. Filipe Vanelli é apaixonado por proporcionar aos seus pacientes o melhor atendimento e resultados de excelência, utilizando as técnicas mais modernas e eficazes do mercado de estética.
+        </p>
+      </div>
     </div>
   </section>
-<!-- Caixa "Agende sua consulta!" -->
-<div class="cta-box">
-  <h3>Cuide da Sua Beleza!</h3>
-  <p>Tratamentos estéticos para você brilhar.</p>
-  <a href="https://wa.me/1234567890" class="cta-button" target="_blank">Agende sua consulta</a>
-</div>
-
-    <!-- Seção Sobre Nosso Trabalho -->
-<section id="sobre" class="descricao">
-  <div class="descricao-container">
-    <div class="descricao-imagem">
-      <img src="banner.jpg" alt="Dr. Filipe Vanelli - Estética Avançada">
-    </div>
-    <div class="descricao-texto">
-      <h2>Sobre o Dr. Filipe Vanelli</h2>
-      <hr class="separator">
-      <p>
-        O Dr. Filipe Vanelli é um profissional dedicado que alia sua expertise farmacêutica e sólida formação médica para transformar a estética em arte. Com ampla experiência e constante atualização em tratamentos avançados, ele desenvolve procedimentos personalizados que realçam a beleza natural dos pacientes, combinando rigor científico e sensibilidade para proporcionar resultados surpreendentes e um bem‐estar incomparável.
-      </p>
-      <p>
-        Formado em Farmácia e Medicina, o Dr. Filipe Vanelli é apaixonado por proporcionar aos seus pacientes o melhor atendimento e resultados de excelência, utilizando as técnicas mais modernas e eficazes do mercado de estética.
-      </p>
-    </div>
-  </div>
-</section>
 
 
 
@@ -76,11 +75,6 @@
     </div>
   </div>
 </section>
-
-
-
-
-
 
 
 
