--- a/index.html
+++ b/index.html
@@ -28,35 +28,147 @@
   </section>
 
   <!-- Seção Sobre Nosso Trabalho -->
-  <section id="sobre" class="descricao">
-    <!-- Caixa "Cuide da Sua Beleza!" acima do container -->
-    <div class="cta-box">
-      <h3>Cuide da Sua Beleza!</h3>
-      <p>Tratamentos estéticos para você brilhar.</p>
-      <a href="https://wa.me/1234567890" class="cta-button" target="_blank">Agende sua consulta</a>
+<section id="sobre" class="descricao">
+  <!-- Caixa "Cuide da Sua Beleza!" acima do container -->
+  <div class="cta-box">
+    <h3>Cuide da Sua Beleza!</h3>
+    <p>Tratamentos estéticos para você brilhar.</p>
+    <a href="https://wa.me/1234567890" class="cta-button" target="_blank">Agende sua consulta</a>
+  </div>
+
+  <!-- Seção sobre o doutor -->
+  <section class="sobre-doutor">
+    <div class="sobre-foto">
+      <img src="banner.jpg" alt="Dr. Filipe Vanelli">
     </div>
-  
-    <div class="descricao-container">
-      <div class="descricao-imagem">
-        <img src="banner.jpg" alt="Dr. Filipe Vanelli - Estética Avançada">
-      </div>
-      <div class="descricao-texto">
-        <h2>Sobre o Dr. Filipe Vanelli</h2>
-        <hr class="separator">
-        <p>
-          O Dr. Filipe Vanelli é um profissional dedicado que alia sua expertise farmacêutica e sólida formação médica para transformar a estética em arte. Com ampla experiência e constante atualização em tratamentos avançados, ele desenvolve procedimentos personalizados que realçam a beleza natural dos pacientes, combinando rigor científico e sensibilidade para proporcionar resultados surpreendentes e um bem‐estar incomparável.
-        </p>
-        <p>
-          Formado em Farmácia e Medicina, o Dr. Filipe Vanelli é apaixonado por proporcionar aos seus pacientes o melhor atendimento e resultados de excelência, utilizando as técnicas mais modernas e eficazes do mercado de estética.
-        </p>
+    <div class="sobre-texto">
+      <h2>Sobre o Dr. Filipe Vanelli</h2>
+      <div class="sobre-info">
+        <div class="info-item">
+          <i class="fas fa-graduation-cap"></i>
+          <h3>Formação</h3>
+          <p>O Dr. Filipe Vanelli é formado em Farmácia e Medicina, possuindo uma base sólida e abrangente nas ciências da saúde, o que garante uma visão ampla e detalhada das necessidades dos pacientes.</p>
+        </div>
+        <div class="info-item">
+          <i class="fas fa-user-md"></i>
+          <h3>Especialização</h3>
+          <p>Com especialização em Estética Avançada, o Dr. Filipe está sempre atualizado nas últimas técnicas e tratamentos para oferecer soluções eficazes, personalizadas e de alta qualidade.</p>
+        </div>
+        <div class="info-item">
+          <i class="fas fa-briefcase-medical"></i>
+          <h3>Experiência</h3>
+          <p>Com mais de 10 anos de experiência na área de estética avançada, o Dr. Filipe já transformou a vida de centenas de pacientes, proporcionando resultados surpreendentes e um bem-estar duradouro.</p>
+        </div>
       </div>
     </div>
   </section>
+</section>
 
 
 
 
-<section id="estatisticas" class="estatisticas">
+
+<!-- Redes Sociais -->
+<section class="redes-sociais">
+  <h2>Confira nossas redes sociais!</h2>
+  <div class="social-container">
+    <a href="https://www.instagram.com/dr.filipevaneli/" class="social-card instagram" aria-label="Instagram">
+      <img src="insta.png" alt="Instagram" class="social-img">
+      <span>Instagram</span>
+    </a>
+    <a href="https://wa.me/553598038161" class="social-card whatsapp" aria-label="WhatsApp">
+      <img src="whats.png" alt="WhatsApp" class="social-img">
+      <span>WhatsApp</span>
+    </a>
+    <a href="mailto:joao2005souza@gmail.com" class="social-card gmail" aria-label="Gmail">
+      <img src="gmail.png" alt="Gmail" class="social-img">
+      <span>Gmail</span>
+    </a>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Carrossel de Resultados 1: Procedimentos de Boca e Nariz -->
+<section class="carrossel" aria-label="Galeria de Resultados de Procedimentos de Boca e Nariz">
+  <div class="carousel-wrapper">
+    <!-- Caixa de Descrição -->
+    <div class="carousel-description">
+      <div class="carousel-description-content">
+        <h3>Procedimentos de Boca e Nariz</h3>
+        <p>
+          Realce sua beleza natural com tratamentos estéticos para a boca e nariz. Transformações sutis, porém impactantes, para um rosto mais harmonioso.
+        </p>
+        <ul>
+          <li><strong>Naturalidade garantida:</strong> Resultados discretos e eficazes.</li>
+          <li><strong>Correção de imperfeições:</strong> Modelagem personalizada para harmonia facial.</li>
+          <li><strong>Recuperação rápida:</strong> Procedimentos pouco invasivos, com retorno imediato às suas atividades.</li>
+        </ul>
+      </div>
+    </div>
+    <!-- Slider de Imagens -->
+    <div class="carousel-slider" data-carousel>
+      <div class="slider-track">
+        <img src="imagem1.jpg" alt="Procedimento Estético de Boca e Nariz 1" loading="lazy">
+        <img src="imagem2.jpg" alt="Procedimento Estético de Boca e Nariz 2" loading="lazy">
+        <img src="imagem3.jpg" alt="Procedimento Estético de Boca e Nariz 3" loading="lazy">
+        <img src="imagem4.jpg" alt="Procedimento Estético de Boca e Nariz 4" loading="lazy">
+      </div>
+      <button class="slider-nav prev" aria-label="Slide anterior">&#10094;</button>
+      <button class="slider-nav next" aria-label="Próximo slide">&#10095;</button>
+      <div class="slider-indicators"></div>
+    </div>
+  </div>
+</section>
+
+<!-- Carrossel de Resultados 2: Procedimentos Estéticos Gerais -->
+<section class="carrossel" aria-label="Galeria de Resultados Estéticos Gerais">
+  <div class="carousel-wrapper">
+    <div class="carousel-description">
+      <div class="carousel-description-content">
+        <h3>Procedimentos Estéticos Avançados</h3>
+        <p>
+          Experimente os melhores tratamentos estéticos do mercado, com resultados naturais e protocolos de segurança de ponta. Sua beleza, nossa prioridade.
+        </p>
+        <ul>
+          <li><strong>Personalização:</strong> Tratamentos adequados às suas necessidades específicas.</li>
+          <li><strong>Recuperação rápida:</strong> Técnicas minimamente invasivas para um retorno rápido à rotina.</li>
+          <li><strong>Resultados visíveis:</strong> Eficácia garantida em poucas sessões.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="carousel-slider" data-carousel>
+      <div class="slider-track">
+        <img src="imagem5.jpg" alt="Procedimento Estético Avançado 1" loading="lazy">
+        <img src="imagem6.jpg" alt="Procedimento Estético Avançado 2" loading="lazy">
+        <img src="imagem7.jpg" alt="Procedimento Estético Avançado 3" loading="lazy">
+        <img src="imagem8.jpg" alt="Procedimento Estético Avançado 4" loading="lazy">
+      </div>
+      <button class="slider-nav prev" aria-label="Slide anterior">&#10094;</button>
+      <button class="slider-nav next" aria-label="Próximo slide">&#10095;</button>
+      <div class="slider-indicators"></div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+    <section id="estatisticas" class="estatisticas">
   <div class="estatisticas-container">
     <div class="estatistica" id="estatistica1">
       <i class="fas fa-shield-alt"></i>
@@ -75,202 +187,105 @@
     </div>
   </div>
 </section>
-
-
-
-
-
-
-
-    <!-- Redes Sociais -->
-    <section class="redes-sociais">
-      <h2>Siga-nos nas Redes Sociais</h2>
-      <div class="social-container">
-        <a href="https://www.instagram.com/dr.filipevaneli/" class="social-card instagram" aria-label="Instagram">
-          <img src="insta.png" alt="Instagram" class="social-img">
-          <span>Instagram</span>
-        </a>
-        <a href="https://wa.me/553598038161" class="social-card whatsapp" aria-label="WhatsApp">
-          <img src="whats.png" alt="WhatsApp" class="social-img">
-          <span>WhatsApp</span>
-        </a>
-        <a href="mailto:joao2005souza@gmail.com" class="social-card gmail" aria-label="Gmail">
-          <img src="gmail.png" alt="Gmail" class="social-img">
-          <span>Gmail</span>
-        </a>
-      </div>
-    </section>
-  </main>
- 
-</body>
-</html>
-
-
-
-
-
-
-    <!-- Carrossel de Resultados 1 -->
-    <section class="carrossel" aria-label="Galeria de Resultados">
-      <div class="carousel-wrapper">
-        <!-- Caixa de Descrição -->
-        <div class="carousel-description">
-          <div class="carousel-description-content">
-            <h3>Procedimento Inovador</h3>
-            <p>
-              Descubra como a união do conhecimento farmacêutico e médico se converte em resultados surpreendentes para sua pele.
-            </p>
-            <ul>
-              <li>Resultados visíveis em poucas sessões</li>
-              <li>Tratamentos que respeitam sua individualidade</li>
-              <li>Procedimentos seguros e eficazes</li>
-            </ul>
-          </div>
-        </div>
-        <!-- Slider de Imagens -->
-        <div class="carousel-slider" data-carousel>
-          <div class="slider-track">
-            <img src="imagem1.jpg" alt="Procedimento Inovador 1" loading="lazy">
-            <img src="imagem2.jpg" alt="Procedimento Inovador 2" loading="lazy">
-            <img src="imagem3.jpg" alt="Procedimento Inovador 3" loading="lazy">
-            <img src="imagem4.jpg" alt="Procedimento Inovador 4" loading="lazy">
-          </div>
-          <button class="slider-nav prev" aria-label="Slide anterior">&#10094;</button>
-          <button class="slider-nav next" aria-label="Próximo slide">&#10095;</button>
-          <div class="slider-indicators"></div>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- Carrossel de Resultados 2 -->
-    <section class="carrossel" aria-label="Galeria de Resultados 2">
-      <div class="carousel-wrapper">
-        <div class="carousel-description">
-          <div class="carousel-description-content">
-            <h3>Procedimento Avançado</h3>
-            <p>
-              Experimente o que há de mais moderno em tratamentos estéticos, com protocolos que garantem segurança e resultados naturais.
-            </p>
-            <ul>
-              <li>Abordagem personalizada</li>
-              <li>Menor tempo de recuperação</li>
-              <li>Resultados comprovados</li>
-            </ul>
-          </div>
-        </div>
-        <div class="carousel-slider" data-carousel>
-          <div class="slider-track">
-            <img src="imagem5.jpg" alt="Procedimento Avançado 5" loading="lazy">
-            <img src="imagem6.jpg" alt="Procedimento Avançado 6" loading="lazy">
-            <img src="imagem7.jpg" alt="Procedimento Avançado 7" loading="lazy">
-            <img src="imagem8.jpg" alt="Procedimento Avançado 8" loading="lazy">
-          </div>
-          <button class="slider-nav prev" aria-label="Slide anterior">&#10094;</button>
-          <button class="slider-nav next" aria-label="Próximo slide">&#10095;</button>
-          <div class="slider-indicators"></div>
-        </div>
-      </div>
-    </section>
    
-    <!-- Seção de Avaliações/Depoimentos – Estilo SVZ -->
-    <section class="reviews-container">
-      <h2 class="reviews-title">Confira o que os nossos clientes falam de nós!</h2>
-      <div class="review-cards-wrapper">
-        <div class="review-card">
-          <img src="https://via.placeholder.com/40" alt="Foto de Carlos Rogerio" class="review-avatar">
-          <div class="review-content">
-            <div class="review-header">
-              <strong>Carlos Rogerio</strong>
-              <span class="review-date">07/01/2025</span>
-            </div>
-            <div class="review-stars">★★★★★</div>
-            <p class="review-text">
-              Olha até aqui, não tenho o que reclamar de nada, sou muito bem atendido desde a recepção pela Laís...
-            </p>
-          </div>
-          <img src="https://cdn-icons-png.flaticon.com/512/2991/2991148.png" alt="Google" class="review-google-icon">
+   <!-- Seção de Avaliações/Depoimentos – Estilo SVZ -->
+<section class="reviews-container">
+  <h2 class="reviews-title">Confira o que os nossos clientes falam de nós!</h2>
+  <div class="review-cards-wrapper">
+    <div class="review-card">
+      <img src="https://via.placeholder.com/40" alt="Foto de Carlos Rogerio" class="review-avatar">
+      <div class="review-content">
+        <div class="review-header">
+          <strong>Carlos Rogerio</strong>
+          <span class="review-date">07/01/2025</span>
         </div>
-   
-        <div class="review-card">
-          <img src="https://via.placeholder.com/40/ff0077/ffffff?text=M" alt="Avatar Marco" class="review-avatar">
-          <div class="review-content">
-            <div class="review-header">
-              <strong>Marco Aurelio Franco</strong>
-              <span class="review-date">06/01/2025</span>
-            </div>
-            <div class="review-stars">★★★★★</div>
-            <p class="review-text">
-              Tive uma ótima experiência, o atendimento da Keila foi o melhor e mais confortável possível...
-            </p>
-          </div>
-          <img src="https://cdn-icons-png.flaticon.com/512/2991/2991148.png" alt="Google" class="review-google-icon">
-        </div>
-   
-        <!-- Adicione mais reviews seguindo esse modelo -->
+        <div class="review-stars">★★★★★</div>
+        <p class="review-text">
+          Olha até aqui, não tenho o que reclamar de nada, sou muito bem atendido desde a recepção pela Laís...
+        </p>
       </div>
-    </section>
-   
+      <img src="https://cdn-icons-png.flaticon.com/512/2991/2991148.png" alt="Google" class="review-google-icon">
+    </div>
+
+
+    <div class="review-card">
+      <img src="https://via.placeholder.com/40/ff0077/ffffff?text=M" alt="Avatar Marco" class="review-avatar">
+      <div class="review-content">
+        <div class="review-header">
+          <strong>Marco Aurelio Franco</strong>
+          <span class="review-date">06/01/2025</span>
+        </div>
+        <div class="review-stars">★★★★★</div>
+        <p class="review-text">
+          Tive uma ótima experiência, o atendimento da Keila foi o melhor e mais confortável possível...
+        </p>
+      </div>
+      <img src="https://cdn-icons-png.flaticon.com/512/2991/2991148.png" alt="Google" class="review-google-icon">
+    </div>
+
+    
+
+
+    <!-- Adicione mais reviews seguindo esse modelo -->
+  </div>
+</section>
+
+
 <!-- RODAPE -->
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rodapé com Redes Sociais</title>
-  <!-- Link para o Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <!-- Estilos do Rodapé -->
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<footer class="footer">
+  <div class="footer-content">
+    <div class="footer-logo">
+      <img src="logo.png" alt="Logo" class="logo-img">
+    </div>
 
 
-  <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-logo">
-        <img src="logo.png" alt="Logo" class="logo-img">
+    <div class="footer-info">
+      <div class="footer-info-item">
+        <strong>Local de atendimento:</strong>
+        <p>Rua Misseno de Pádue, 427 Centro, Lavras - MG</p>
+        <p>CEP 37200-142</p>
       </div>
-
-
-      <div class="footer-info">
-        <div class="footer-info-item">
-          <strong>Local de atendimento:</strong>
-          <p>Rua Misseno de Pádue, 427 Centro, Lavras - MG</p>
-          <p>CEP 37200-142</p>
-        </div>
-        <div class="footer-info-item">
-          <strong>Local de atendimento:</strong>
-          <p>Tv. Governador Valadares, 45 Centro, Perdões - MG</p>
-          <p>CEP 37260-000</p>
-        </div>
-        <div class="footer-info-item">
-          <strong>Local de atendimento:</strong>
-          <p>Segunda a Quinta-feira das 06:00 às 18:00.</p>
-          <p>Sexas-feiras das 06:00 às 17:00. Horário diferenciado durante feriados.</p>
-        </div>
+      <div class="footer-info-item">
+        <strong>Local de atendimento:</strong>
+        <p>Tv. Governador Valadares, 45 Centro, Perdões - MG</p>
+        <p>CEP 37260-000</p>
       </div>
-
-
-      <div class="footer-social">
-        <a href="https://www.instagram.com/dr.filipevaneli/" class="social-icon" target="_blank" aria-label="Instagram">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://wa.me/553598038161" class="social-icon" target="_blank" aria-label="WhatsApp">
-          <i class="fab fa-whatsapp"></i>
-        </a>
-        <a href="mailto:joao2005souza@gmail.com" class="social-icon" target="_blank" aria-label="Gmail">
-          <i class="fas fa-envelope"></i>
-        </a>
+      <div class="footer-info-item">
+        <strong>Local de atendimento:</strong>
+        <p>Segunda a Quinta-feira das 06:00 às 18:00.</p>
+        <p>Sexas-feiras das 06:00 às 17:00. Horário diferenciado durante feriados.</p>
       </div>
     </div>
 
 
-    <div class="footer-bottom">
-      <p>&copy; 2025 Souza, Siqueira, Vidal Vilela & Zanateli. Todos os direitos reservados.</p>
-     
-  </footer>
+    <div class="footer-social">
+      <a href="https://www.instagram.com/dr.filipevaneli/" class="social-icon" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://wa.me/553598038161" class="social-icon" target="_blank" aria-label="WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+      <a href="mailto:joao2005souza@gmail.com" class="social-icon" target="_blank" aria-label="Gmail">
+        <i class="fas fa-envelope"></i>
+      </a>
+    </div>
+  </div>
 
 
+  <div class="footer-bottom">
+    <p>&copy; 2025 Souza, Siqueira, Vidal Vilela & Zanateli. Todos os direitos reservados.</p>
+  </div>
+</footer>
+
+
+<!-- Link para o Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
+<!-- Estilos do Rodapé -->
+<link rel="stylesheet" href="style.css">
 </body>
 </html>
+
+
+
