--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
  
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@400;600&display=swap" rel="stylesheet">
  
   <!-- Ícones (FontAwesome) -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -408,3 +408,4 @@
 
 <!-- Estilos do Rodapé -->
 <link rel="stylesheet" href="style.css">
+
